name:                linkfin
version:             0.1.0.0
synopsis:            Find links.
license:             MIT
license-file:        LICENSE
author:              Scott Olsen
maintainer:          scg.olsen@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable linkfin
  main-is:             Main.hs
  build-depends:       base >=4.11 && <4.12,
                       directory >= 1.3.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
